--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -5,5 +5,9 @@
   "license": "MIT",
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "@t3-oss/env-core": "^0.10.1",
+    "zod": "^3.23.8"
   }
 }
