--- a/package.json
+++ b/package.json
@@ -19,17 +19,7 @@
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
-  "dependencies": {
-    "@elysiajs/eden": "^1.0.13",
-    "akore": "github:Pavez7274/akore#dev",
-    "elysia": "^1.0.20",
-    "elysia-decorators": "^1.0.0",
-    "mdbox": "^0.1.0",
-    "microsoft-translate-api": "^1.1.0"
-  },
   "trustedDependencies": [
-    "@biomejs/biome",
-    "akore",
-    "es5-ext"
+    "@biomejs/biome"
   ]
 }
