--- a/packages/akore/tsconfig.json
+++ b/packages/akore/tsconfig.json
@@ -1,27 +1,15 @@
 {
+  "extends": "@konkon/config/base.json",
   "compilerOptions": {
-    // Enable latest features
-    "lib": ["ESNext", "DOM"],
-    "target": "ESNext",
-    "module": "ESNext",
-    "moduleDetection": "force",
-    "jsx": "react-jsx",
-    "allowJs": true,
-
-    // Bundler mode
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
-    "verbatimModuleSyntax": true,
-    "noEmit": true,
-
-    // Best practices
-    "strict": true,
-    "skipLibCheck": true,
-    "noFallthroughCasesInSwitch": true,
-
-    // Some stricter flags (disabled by default)
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noPropertyAccessFromIndexSignature": false
+     "lib": ["ESNext", "DOM"],
+     "target": "ESNext",
+     "module": "ESNext",
+     "moduleDetection": "force",
+ 
+     "moduleResolution": "bundler",
+     "types": [
+       "node",
+       "bun-types"
+     ]
   }
 }
