:broom: chore: bug fix

--- a/apps/bot/package.json
+++ b/apps/bot/package.json
@@ -2,7 +2,7 @@
   "name": "bot",
   "version": "1.0.0",
   "scripts": {
-    "dev": "bun run src/index.ts"
+    "dev": "bun run --watch src/index.ts"
   },
   "keywords": [],
   "author": "@chewawi",
