--- a/apps/bot/package.json
+++ b/apps/bot/package.json
@@ -18,7 +18,7 @@
     "mdbox": "^0.1.0",
     "pg": "^8.11.5",
     "pg-listen": "^1.7.0",
-    "seyfert": "github:tiramisulabs/seyfert",
+    "seyfert": "^1.5.0",
     "yunaforseyfert": "^0.10.3"
   },
   "devDependencies": {
