--- a/packages/akore/tsconfig.json
+++ b/packages/akore/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@konkon/config/base.json",
+  "extends": "@seifato/config/base.json",
   "compilerOptions": {
      "lib": ["ESNext", "DOM"],
      "target": "ESNext",
