--- a/biome.json
+++ b/biome.json
@@ -9,6 +9,9 @@
        "recommended": true,
        "correctness": {
         "noUnusedImports": "warn"
+       },
+       "suspicious": {
+        "noExplicitAny": "off"
        }
      }
    },
