--- a/turbo.json
+++ b/turbo.json
@@ -1,19 +1,21 @@
 {
-   "$schema": "https://turbo.build/schema.json",
-   "tasks": {
-     "build": {
-       "dependsOn": ["^build"],
-       "outputs": [".next/**", "!.next/cache/**"]
-     },
-     "check-types": {
-       "dependsOn": ["^check-types"]
-     },
-     "dev": {
-       "persistent": true,
-       "cache": false
-     },
-     "start": {
-      
-     }
-   }
- }
+  "$schema": "https://turbo.build/schema.json",
+  "ui": "tui",
+  "tasks": {
+    "build": {
+      "dependsOn": ["^build"],
+      "inputs": ["$TURBO_DEFAULT$", ".env*"]
+    },
+    "start": {
+      "persistent": true
+    },
+    "lint": {
+      "dependsOn": ["^lint"]
+    },
+    "dev": {
+      "interactive": true,
+      "persistent": true,
+      "cache": false
+    }
+  }
+}
