--- a/apps/bot/package.json
+++ b/apps/bot/package.json
@@ -2,31 +2,28 @@
   "name": "bot",
   "version": "1.0.0",
   "scripts": {
-    "dev": "bun run --watch src/index.ts"
+    "dev": "bun run --watch src/index.ts",
+    "build": "tsup",
+    "start": "bun run dist/index.js"
   },
   "keywords": [],
   "author": "@chewawi",
   "license": "ISC",
   "dependencies": {
-    "@elysiajs/eden": "^1.0.14",
     "@seifato/config": "workspace:*",
     "@seifato/db": "workspace:*",
+    "@seifato/services": "workspace:*",
     "@types/lodash": "^4.17.4",
-    "drizzle-orm": "^0.30.10",
-    "elysia": "^1.0.22",
+    "api": "workspace:*",
     "lodash": "^4.17.21",
     "mdbox": "^0.1.0",
-    "pg": "^8.11.5",
-    "pg-listen": "^1.7.0",
-    "seyfert": "^1.5.0",
-    "yunaforseyfert": "^0.10.3"
+    "seyfert": "github:tiramisulabs/seyfert",
+    "ssca": "^2.1.3",
+    "sscm": "^1.0.2",
+    "sslp": "^1.0.3"
   },
   "devDependencies": {
-    "@swc/core": "^1.5.7",
     "@types/node": "^20.3.1",
-    "@types/pg": "^8.11.6",
-    "drizzle-kit": "^0.21.4",
-    "tsc-watch": "^6.2.0",
     "tsup": "^8.0.2",
     "typescript": "^5.1.3"
   }
