--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -2,7 +2,7 @@
   "name": "@seifato/db",
   "version": "1.0.0",
   "description": "",
-  "main": "./src",
+  "main": "./src/index.ts",
   "files": ["src/**"],
   "scripts": {
     "push": "bunx drizzle-kit migrate",
@@ -20,10 +20,10 @@
     "tsup": "^8.0.2"
   },
   "dependencies": {
+    "@seifato/config": "workspace:*",
     "@neondatabase/serverless": "^0.9.3",
-    "db0": "^0.1.4",
     "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.30.10",
+    "drizzle-orm": "latest",
     "pg": "^8.11.5",
     "typescript": "^5.1.3"
   }
