--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,3 @@
 {
-	"extends": "@seifato/config/base.json",
-	"compilerOptions": {
-		"paths": {
-			"@seifato/*": [
-				"./*", "./packages/*"
-			]
-		}
-	}
+	"extends": "@seifato/config/base.json"
 }
