--- a/apps/bot/tsconfig.json
+++ b/apps/bot/tsconfig.json
@@ -3,7 +3,6 @@
 	"compilerOptions": {
 		"target": "ES2015"
 	},
-	"references": [
-		{ "path": "../../packages/services" }
-	]
+	"include": ["."],
+	"exclude": ["node_modules"]
 }
