--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -1,11 +1,10 @@
 {
 	"name": "konkon",
 	"module": "src/index.ts",
-	"type": "module",
 	"scripts": {
-		"build": "tsc --build",
-		"dev": "bun run --watch src/index.ts",
-		"start": "node dist/index.js"
+		"build": "tsup",
+		"dev": "tsup --watch --onSuccess \"pnpm start\"",
+		"start": "NODE_ENV=production node dist/index.js"
 	},
 	"devDependencies": {
 		"@types/bun": "^1.1.6",
@@ -23,5 +22,9 @@
 		"seyfert": "github:tiramisulabs/seyfert",
 		"ssca": "2.1.3",
 		"sslp": "^1.0.2"
+	},
+	"tsup": {
+		"entry": ["src/**/*.ts"],
+		"clean": true
 	}
 }
