--- a/apps/app/tsconfig.json
+++ b/apps/app/tsconfig.json
@@ -1,10 +1,11 @@
 {
-  "extends": "@konkon/ts-config/base.json",
-  "compilerOptions": {
-    "experimentalDecorators": true,
-    "rootDir": "./src",
-    "outDir": "./dist",
-  },
-  "include": ["src/**/*"],
-  "exclude": ["dist", "node_modules"]
+	"extends": "@konkon/ts-config/base.json",
+	"compilerOptions": {
+		"emitDecoratorMetadata": true,
+		"experimentalDecorators": true,
+		"rootDir": "./src",
+		"outDir": "./dist"
+	},
+	"include": ["./src/**/*"],
+	"exclude": ["dist", "node_modules"]
 }
